--- a/crates/smart-cache-macro/Cargo.toml
+++ b/crates/smart-cache-macro/Cargo.toml
@@ -19,3 +19,6 @@ quote = "1.0"
 syn = { version = "2.0", features = ["full"] }
 proc-macro2 = "1.0"
 sha2 = "0.11.0-pre.4"
+
+[dev-dependencies]
+trybuild = "1.0"
