--- a/crates/smart-cache-macro/Cargo.toml
+++ b/crates/smart-cache-macro/Cargo.toml
@@ -21,4 +21,6 @@ proc-macro2 = "1.0"
 sha2 = "0.11.0-pre.4"
 
 [dev-dependencies]
-trybuild = "1.0"
+trybuild = "1.0.89"
+smart-cache = { path = "../smart-cache" }
+rkyv = { version = "0.8.9" }
