--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 members = ["crates/*"]
 resolver = "2"
 
+[workspace.package]
+version = "0.2.0"
+edition = "2021"
+authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/andrewgazelka/smart-cache"
+readme = "README.md"
+
 [workspace.lints.rust]
 rust_2018_idioms = { level = "deny", priority = -1 }
 
@@ -12,3 +20,15 @@ pedantic = { level = "deny", priority = -1 }
 perf = { level = "deny", priority = -1 }
 style = { level = "deny", priority = -1 }
 suspicious = { level = "deny", priority = -1 }
+
+[workspace.dependencies]
+quote = "1.0"
+syn = { version = "2.0", features = ["full"] }
+proc-macro2 = "1.0"
+eyre = "0.6"
+tracing = "0.1"
+rkyv = "0.8.9"
+once_cell = "1.0"
+dirs = "6.0.0"
+sha2 = "0.11.0-pre.4"
+redb = "2.4.0"
