--- a/crates/smart-cache-macro/Cargo.toml
+++ b/crates/smart-cache-macro/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name = "smart-cache-macro"
-version = "0.1.0"
-edition = "2021"
-authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "Procedural macros for smart-cache"
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/andrewgazelka/smart-cache"
 documentation = "https://docs.rs/smart-cache-macro"
-readme = "../../README.md"
 keywords = ["cache", "macro", "proc-macro"]
 categories = ["caching", "development-tools"]
 
@@ -15,12 +14,11 @@ categories = ["caching", "development-tools"]
 proc-macro = true
 
 [dependencies]
-quote = "1.0"
-syn = { version = "2.0", features = ["full"] }
-proc-macro2 = "1.0"
-sha2 = "0.11.0-pre.4"
+quote.workspace = true
+syn.workspace = true
+proc-macro2.workspace = true
+sha2.workspace = true
 
 [dev-dependencies]
 trybuild = "1.0.89"
-smart-cache = { path = "../smart-cache" }
-rkyv = { version = "0.8.9" }
+rkyv = { workspace = true }
