--- a/crates/smart-cache/Cargo.toml
+++ b/crates/smart-cache/Cargo.toml
@@ -1,23 +1,22 @@
 [package]
 name = "smart-cache"
-version = "0.1.0"
-edition = "2021"
-authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
 description = "A smart caching library for Rust with automatic invalidation"
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/andrewgazelka/smart-cache"
 documentation = "https://docs.rs/smart-cache"
-readme = "../../README.md"
 keywords = ["cache", "caching", "persistence", "database"]
 categories = ["caching", "database"]
 
 [dependencies]
-smart-cache-macro = { version = "0.1.0", path = "../smart-cache-macro" }
-redb = "2.4.0"
-eyre = "0.6"
-once_cell = "1.0"
-tracing = "0.1"
-dirs = "6.0.0"
+smart-cache-macro = { version = "0.2.0", path = "../smart-cache-macro" }
+redb.workspace = true
+eyre.workspace = true
+once_cell.workspace = true
+tracing.workspace = true
+dirs.workspace = true
 
 [dev-dependencies]
-rkyv = "0.8.9"
+rkyv = { workspace = true }
